wave : corrections des erreurs (contraste bouton de filtres, modif h6 en p, début ajout alt et title sur les photos)

--- a/assets/style.css
+++ b/assets/style.css
@@ -85,9 +85,11 @@ body {
 	font-style: italic;
 	width: 60%;
 }
+.about-me-p2 {
+	font-size: 14px;
+}
 #about-me p {
 	width: 80%;
-	font-size: 14px;
 }
 
 #gallery {
@@ -102,7 +104,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #8a8344;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
